u sepgupta LP body

--- a/html/lesson_plans/contemporary_postcolonial_texts.html
+++ b/html/lesson_plans/contemporary_postcolonial_texts.html
@@ -146,7 +146,7 @@
 					</section>
 
 					<section aria-labelledby="idea-2">
-						<h4 id="idea-2">Mitra, &ldquo;Mosquito&rdquo; and &ldquo;Glass&rdquo; in <em>Mosquito and Other Stories;</em> Lowe, <em>The Intimacies of Four Continents</em><h4>
+						<h4 id="idea-2">Mitra, &ldquo;Mosquito&rdquo; and &ldquo;Glass&rdquo; in <em>Mosquito and Other Stories;</em> Lowe, <em>The Intimacies of Four Continents</em></h4>
 						<p>The two stories, &ldquo;Mosquito&rdquo; and &ldquo;Glass,&rdquo; offer an excellent glimpse into the neo-imperial re-imagining of Africa in a post-World War II moment. The figure of Ghanada and his exploits in the Sakhalin islands and Angola offer rich interlocutory possibilities with Lisa Lowe&rsquo;s work particularly as they highlight the violent creation of the intercontinental &ldquo;intimacies.&rdquo; Both Ghanada and the anticipated readers of the stories exemplify, to some extent at least, the &ldquo;imperial connections&rdquo; that Lowe draws attention to, in describing the affiliation with Thackeray acknowledged by C. L. R James.</p>
 
 						<p>Not only do the work&rsquo;s readers and characters sketch the survival of an imperial genealogy, Ghanada embodies the dreams and aspirations of the classic figure of a &ldquo;new world modernity&rdquo; (Lowe 80). While the burden of this modern rests on a class of English-educated colonized subjects, it works necessarily by constructing new/newly adapted racial others&mdash;in Ghanada&rsquo;s tales these positions are occupied by the Chinese, Indigenous Africans, and Global South demographic groups.</p>
@@ -168,10 +168,103 @@
 
 				<section aria-labelledby="primary-sources">
 					<h3 id="primary-sources">Suggested Primary Sources</h3>
+
+					<h4 id="sources-1">British colonial texts written about Africa (c19):</h4>
+					<dl>
+						<dt id="livingstone">Livingstone, David. <em><a href="https://www.gutenberg.org/files/1039/1039-h/1039-h.htm">Missionary Travels and Researches in South Africa</a></em>. John Murray, 1857.</dt>
+
+						<dd aria-describedby="livingstone">
+							<p>The <a href="https://livingstoneonline.org/in-his-own-words/missionary-travels-manuscript/two-versions-missionary-travels">manuscript version</a> of Livingstone&rsquo;s <em>Missionary Travels</em>&mdash;with handwritten pages, maps, and extensive revisions&mdash;is a great entry point into the laborious textual production of Africa. Livingstone. Ji Eun Lee&rsquo;s lesson plan on <a href="https://undiscipliningvc.org/html/lesson_plans/africa_colonial_landscapes.html">Colonial Landscapes and Travel Narratives</a> sketches out the multiple uses of this text in detail. What I add here is how certain scenes described by him become central to the ideology of the imperial romance/adventure narrative: the lion attack (ch. 1), his articulation of mid-century British-Boer relations (ch. 2), the attack of the tsetse fly (ch. 4), missionary activities (ch. 8). A number of these episodes (in ways directly reminiscent of Livingstone&rsquo;s text) recur in later fiction, demonstrating the cult-like popularity of <em>Missionary Travels</em> in its time.</p>
+						</dd>
+					</dl>
+
+					<dl>
+						<dt id="stanley">Stanley, Henry Morton. <em>Through the Dark continent, or, The Sources of the Nile: Around the Great Lakes of Equatorial Africa and Down the Livingstone River to the Atlantic Ocean. </em>Vol <a href="https://archive.org/details/in.ernet.dli.2015.173877/page/n1/mode/2up">1</a> &amp; <a href="https://archive.org/details/throughdarkconti1878stan2/page/n5/mode/2up">2</a>. Sampson Lowe, Marston, Searle, and Rivington, 1878.</dt>
+
+						<dd aria-describedby="stanley">
+							<p>Stanley&rsquo;s expedition to Africa opens itself to considering a different set of cultural and textual problems than Livingstone&rsquo;s, particularly around cultural imagery. As a media-conscious journalist, Stanley was much more concerned with marketing his expeditions to a transatlantic audience (as is evident through the publication history of his texts and his career in writing novels). Koivunen gives a detailed account of the technical (visual) equipment that was part of Stanley&rsquo;s expedition and the material history of how his books were illustrated. Paired with this source, Stanley&rsquo;s illustrations, descriptions, and maps offer a detailed glimpse into an extremely popular work and magisterial on Africa that the Victorian audience were deeply familiar with.</p>
+						</dd>
+					</dl>
+
+					<dl>
+						<dt id="ker">Ker, David. <a href="https://www.google.com/books/edition/Lost_Among_White_Africans/eTEPAAAAQAAJ?hl=en&amp;gbpv=1&amp;printsec=frontcover"><em>Lost Among White Africans: A Boy's Adventures on the Upper Congo.</em></a> Cassell and Company, 1886.</dt>
+
+						<dd aria-describedby="ker">
+							<p>Ker&rsquo;s novel is an interesting example of the popular print culture about Africa that derives its information directly from well-known travelogs. Published by Cassell and Company exactly one year before the release of <em>King Solomon&rsquo;s Mines</em>, this book rehearsed elements of Stanley&rsquo;s expeditions for young audiences. The novel opens with &ldquo;two young colonists&rdquo; listening with excitement to the tales of their uncle, Robert Goodman.</p>
+
+							<p>&nbsp;The boys travel to the Congo and encounter the traditional conflicts with wild animals and violent encounters with Indigenous communities central to the travelogue genre, but these incidents are articulated in a casual and entertaining way, expressing the author&rsquo;s lack of first-hand experience unlike Stanley himself or Henry Rider Haggard for example. Another detail that makes the text significant (and makes possible comparative readings) is the fact that Walter Paget, the original illustrator of <em>King Solomon&rsquo;s Mines </em>is also the illustrator for this text.</p>
+						</dd>
+					</dl>
+
+					<dl>
+						<dt id="haggard">Haggard, Henry Rider. <em>King Solomon&rsquo;s Mines</em>. 1885. Penguin Classics, 2008.</dt>
+
+						<dd aria-describedby="haggard">
+							<p>Haggard&rsquo;s novel combines a deep understanding of the practical experience of life and politics in Southern Africa with an experience of mysticism he associates with the continent. Placing <em>King Solomon&rsquo;s Mines</em> in conversation with the popular print culture reveals exactly how conscious the text is about print conventions familiar to the audience (a productive pairing is with Stanley or Ker; secondary text with Achebe, Free, Chrisman, Poon).</p>
+
+							<p>Speaking to the tradition of colonial travel writing, the text uses fictitious maps and location markers, replicates the typical episodes of travel narratives (travel in a ship to a port; hunting expeditions, encounter with relatively isolated Indigenous nations; illness, disease, and starvation; discussion of ancient ruins; discovery of valuable resources), and uses characterization to convey his analysis of the political events in Southern Africa.</p>
+						</dd>
+					</dl>
+
+					<h4 id="sources-2">Retellings of colonial genres from Africa (c19 and 20):</h4>
+					<dl>
+						<dt id="horton">Horton, James B. Africanus. <a href="https://www.google.com/books/edition/West_African_Countries_and_Peoples_Briti/I_JBAQAAMAAJ?hl=en"><em>West African Countries and Peoples</em>.</a> J. Johnson, 1868.</dt>
+
+						<dd aria-describedby="horton">
+							<p>Pairing particularly well with any travelogue by Stanley or Burton, Horton&rsquo;s narrative explicitly critiques and challenges colonialist descriptions of Africa. Written in clear and convincing prose, his excoriation of Richard Burton&rsquo;s racist descriptive techniques offers an important antidote to a limited view of print materials on/from/about Africa. This text would pair particularly well with Achebe&rsquo;s essays, sketching out a long tradition of critique formulated by Africans that analyze their own misrepresentation. Horton&rsquo;s considered critiques (and that of other writers) will aid students in avoiding generalizations about &ldquo;what everyone believed&rdquo; about Africa and Africans and give them a clearer picture of the vociferous public debates ongoing in the print marketplace.</p>
+						</dd>
+					</dl>
+
+					<dl>
+						<dt id="plaatje">Plaatje, Solomon T. P. S. King &amp; Son, 1916.</dt>
+
+						<dd aria-describedby="plaatje">
+							<p>Mhudi is a novel that Plaatje himself describes as a response to the &ldquo;Zulu romances&rdquo; of H.R. Haggard, particularly a novel like <em>Nada the Lily</em>. It offers a revisionist history of the era of Mzilikazi of Matabeleland through the love-story of Mhudi and Ra-Thaga. Through this narrative, Plaatje establishes his authority as a cultural commentator who challenges the oppressive historiography of Southern Africa. The prefatory materials to Plaatje&rsquo;s &ldquo;<a href="https://www.gutenberg.org/ebooks/1452">Native Life in South Africa&rdquo;</a> (not included in this module) could also be added to this discussion since it addresses debates about authorship and literary status available to Black South African men.</p>
+						</dd>
+					</dl>
+
+					<h4 id="sources-3">Bengali impressions of the “dark continent” (c20):</h4>
+
+					<dl>
+						<dt id="bandhyopadhyay">Bandhyopadhyay, Bibhutibhusan. The Mountains of the Moon. 1936. Translated by Santanu Sinha Chaudhuri. Niyogi Books, 2003.</dt>
+
+						<dd aria-describedby="bandhyopadhyay">
+							<p>The novel weaves the imperial romance&rsquo;s typical search for diamonds into Africa into an exploration of coolie or indentured labor migration. Shankar, a Brahmin boy, takes up a position in the Ugandan Railways as a worker to escape his deadening future as a menial clerk in Bengal and remakes himself in the image of the colonial adventurer. His racial identity, however, makes it complicated for him to ascend to the status of the colonial explorer, and he attaches himself to a powerful ally, the Portuguese Diego Alvarez, to acquire status through white proximity. Students can track the text&rsquo;s reworkings of H. R. Haggard&rsquo;s <em>King Solomon&rsquo;s Mines</em>, particularly through plot elements like the Portuguese prospector, the treasure map, the diamonds in the cave, and the several near-death experiences the travelers face. They can also examine the ways in which Shankar forms attachments with white/white-passing figures to distance himself from the Black Indigenous groups who are original custodians of the land and its resources.</p>
+						</dd>
+					</dl>
+
+					<dl>
+						<dt id="mitra">Mitra, Premendra. &ldquo;Mosquito&rdquo; and &ldquo;Glass&rdquo; in <em>Mosquito and Other Stories.</em>1950. Translated by Amlan Das Gupta. Penguin, 2009.</dt>
+
+						<dd aria-describedby="mitra">
+							<p>These short stories explore a Bengali explorer&rsquo;s adventure narrative across colonial geographies a &ldquo;tall tale&rdquo; or exaggerated anecdote shared between members of a men&rsquo;s&rsquo; boarding house (<em>messbari</em>) in post-war Calcutta. Ghana-da, the explorer, traverses every corner of the globe, but in these two stories his destinations are the Sakhalin Islands and Angola, both places where he goes in search of advanced weapons for international warfare. Students can discuss the interaction between tropes from famous Victorian travelogues by Livingstone, Stanley, and Burton and the material traces of modern politics&mdash;railway systems, Nazism, and the Uranium trade&mdash;that structure the journeys. They can also discuss how the novel denies the history of South Asian labor migration in the Indian Ocean through Ghanada, who is constantly figured as a gentlemanly character. The complexly racialized figure of Ghanada becomes an Indian &ldquo;superman&rdquo; constantly placed in opposition to indentured laborers and Indigenous &ldquo;junglees&rdquo; or &ldquo;savages&rdquo; to make space for a superior role for the South Asian masculine subject.</p>
+						</dd>
+					</dl>
 				</section>
 
 				<section aria-labelledby="frameworks">
 					<h3 id="frameworks">Critcal Frameworks</h3>
+
+					<section aria-labelledby="framing-conversations">
+						<h4 id="framework-1">Framing conversations:</h4>
+
+						<dl>
+							<dt id="banerjee">Banerjee, Sukanya. &ldquo;<a href="https://doi.org/10.1017/S1060150318001195.">Transimperial</a>.&rdquo; <em>Victorian Literature and Culture</em>, vol. 46, no. 3&ndash;4, 2018, pp. 925-28.</dt>
+	
+							<dd aria-describedby="banerjee">
+								<p>This brief and versatile essay offers a productive frame for a module that examines the differences as much as the similarities between iterations of connected genres&mdash;travel/adventure/romance&mdash;across a range of colonial/Indian ocean landscapes. Particularly significant is the idea of &ldquo;what has not been so readily mobile&rdquo; across empire&rsquo;s locales, which offers a useful launchpad for conversations on the remaking of colonial narrative paradigms.</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="banerjee-2">Banerjee, Sukanya, et al. &ldquo;<a href="https://doi.org/10.1017/S1060150319000627">Introduction: Widening the Nineteenth Century</a>.&rdquo; <em>Victorian Literature and Culture</em>, vol. 49, no. 1, 2021, pp. 1&ndash;26</dt>
+	
+							<dd aria-describedby="banerjee-2">
+								<p>The role of this essay is to make the explicit purpose of this module&rsquo;s design visible to the students. The call to &ldquo;widen&rdquo; the nineteenth-century in 2021 was certainly one that energized interdisciplinary scholars; it created opportunities to reframe periodization and put a new collection of major and minor works in productive relation. Students can discuss how this module in particular participates in that goal through the explicit aim of foregrounding &ldquo;geotemporal linkages&rdquo; that have become submerged over time.</p>
+							</dd>
+						</dl>
+					</section>
+
 				</section>
 
 				<section aria-labelledby="assignments">
@@ -206,7 +299,7 @@
 						<p>Step 2: Students can spend some time in larger groups discussing the structure and framework of the volume. There could be broad guiding questions about print production, typography, images, multilingualism, materiality, etc. to situate their explorations.</p>
 
 						<p>Step 3: Each student should pick 3 items connecting the same rough topic&mdash;it could be 2 advertisements and 1 article about bicycle sales for instance. They could triangulate these three sources, use their own research skills, and craft a brief glimpse of life viewed from the perspective of Indians in South Africa in the early 20<sup>th</sup> century.</p>
-						
+
 						<p>Step 4: They could place this narrative in conversation with any of the primary/secondary text in this module to frame their discovery within a larger context of exploring indentureship, migration, and racialized labor in empire.</p>
 					</section>
 				</section>
