u spegupta LP body complete

--- a/html/lesson_plans/contemporary_postcolonial_texts.html
+++ b/html/lesson_plans/contemporary_postcolonial_texts.html
@@ -245,7 +245,7 @@
 				<section aria-labelledby="frameworks">
 					<h3 id="frameworks">Critcal Frameworks</h3>
 
-					<section aria-labelledby="framing-conversations">
+					<section aria-labelledby="framework-1">
 						<h4 id="framework-1">Framing conversations:</h4>
 
 						<dl>
@@ -265,6 +265,160 @@
 						</dl>
 					</section>
 
+					<section aria-labelledby="framework-2">
+						<h4 id="framework-2">Theories of imperial travel genres:</h4>
+
+						<dl>
+							<dt id="chrisman">Chrisman, Laura. <em>Rereading the Imperial Romance: British Imperialism and South African Resistance in Haggard, Schreiner, and Plaatje. </em>Clarendon Press, 2000.</dt>
+	
+							<dd aria-describedby="chrisman">
+								<p>Framing the development of elements of the imperial romance genre in context of the evolving sociopolitical history of Southern Africa, Chrisman&rsquo;s book offers a deep dive into the practical conditions that informed the representation of Africa in &ldquo;romances.&rdquo; It can be added to 3a or used as a background resource for any fictional primary text on Southern Africa.</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="free">Free, Melissa. <em>Beyond Gold and Diamonds: Genre, the Authorial Informant, and the British South African Novel.</em> SUNY Press, 2021.</dt>
+	
+							<dd aria-describedby="free">
+								<p>Free develops the concept of the &ldquo;authorial informant&rdquo; to reframe the role of writers like H.R. Haggard, Olive Schreiner and others who straddle the British/Southern African traditions. Her reading of Haggard&rsquo;s &ldquo;female colonial romances&rdquo; might fill one of the most significant gaps of this module&mdash;the participation of white European women in the colonizer&rsquo;s role.</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="howell">Howell, Jessica. <em>Exploring Victorian Travel Literature Disease, Race and Climate.</em> Edinburgh University Press, 2014.</dt>
+	
+							<dd aria-describedby="howell">
+								<p>Howell&rsquo;s concept of &ldquo;disease environments&rdquo; (an extension of Mary Louise Pratt&rsquo;s &ldquo;contact zone&rdquo;) is an excellent way to introduce the gradual creation of racialized geographies through textual strategies. Her focus on medical rhetoric, for example, may be particularly useful in exploring Livingstone&rsquo;s interest in illnesses and infectants, while also offering a lens to look at the psychological malaise that afflicts Haggard&rsquo;s characters at critical moments of the narrative. Her chapter on Horton&rsquo;s reworking of colonial pathology is particularly useful for Section 3.2.</p>
+							</dd>
+						</dl>
+					</section>
+
+					<section aria-labelledby="framework-3">
+						<h4 id="framework-3">Indigenous African critiques of colonialism:</h4>
+
+						<dl>
+							<dt id="achebe">Achebe, Chinua. <em>The Education of a British-Protected Child. </em>Knopf/Doubleday, 2008.</dt>
+	
+							<dd aria-describedby="achebe">
+								<p>The essays &ldquo;Travelling White&rdquo; and &ldquo;Africa&rsquo;s Tarnished Name&rdquo; explore how European and American intellectuals, much like Conrad, have &ldquo;an emotional and psychological spell cast on [them] by the long-established and well-heeled tradition of writing about Africa.&rdquo; Naming this distorting tradition, Achebe&rsquo;s text presents a clear idea of the impact of this &ldquo;idea of Africa.&rdquo;</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="tallie">Tallie, T.J., <em>Queering Colonial Natal: Indigeneity and the Violence of Belonging in Southern Africa</em>. Duke University Press, 2019.</dt>
+	
+							<dd aria-describedby="tallie">
+								<p>Examining the oppressive homosociality of British administrators and missionaries in describing the masculinity of Indigenous Africans, this book can be a way to introduce students to the ways in which queer studies offers important correctives to the colonial paradigms of representation. An especially productive exercise might be to pair Taille with illustrations from Haggard and Stanley, to analyze the processes of depiction that contribute to a strategically abormalized images of Indigenous peoples.</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="mudimbe">Mudimbe, V. Y. <em>The Invention of Africa: Gnosis, Philosophy, and the Order of Knowledge.&nbsp;</em>Indiana University Press, 1988.</dt>
+	
+							<dd aria-describedby="mudimbe">
+								<p>This influential work by Mudimbe identifies the &ldquo;model of history&rdquo; that guides travelers from Mungo Park to anthropologists like Levi-Strauss to engage in a discourse inflected by &ldquo;Africanism.&rdquo; Challenging the notion of Africa as an empty space upon which imperialist notions can be imposed, Mudimbe stages the conflict between discourses of primitivism and savagery that targeted Indigenous cultures, and ways to decenter them through revised &ldquo;methods of knowing.&rdquo;</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="wainaina">Wainaina, Binyavanga. &ldquo;<a href="https://granta.com/how-to-write-about-africa/">How to Write About Africa</a>?&rdquo; <em>Granta</em>. May 2019.</dt>
+	
+							<dd aria-describedby="wainaina">
+								<p>Binyavanga&rsquo;s tongue-in-cheek yet accurate piece satirizes overused stereotypes of Africa. She mockingly tells us to &ldquo;treat Africa as one country&rdquo; in order to highlight common pitfalls affecting Western discourse of Africa from the eighteenth century to the present in a short classroom-friendly piece.</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="faloyin">Faloyin, Dipo. <em>Africa Is Not a Country</em>. W. W. Norton, &amp; Co., 2022.</dt>
+	
+							<dd aria-describedby="faloyin">
+								<p>Responding to Binyavanga&rsquo;s central complaint, Faloyin offers a wealth of narratives about the African continent that opposes the exact framework of imperialist discourse this module is engaged in diagnosing. Faloyin&rsquo;s narratives of individual spaces, cultures, and lived experiences fill in the gaps that have been created through the tired repetition of stereotypical imagery. The discussion of maps as ideological products can be combined with several texts mentioned here.</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="atkins">Atkins, Keletso. <em>The Moon is Dead! Give Us Our Money!</em> Heinemann, 1993.</dt>
+	
+							<dd aria-describedby="atkins">
+								<p>A magisterial social history of Indigenous African working class that will offer a counterforce to top-down approaches to the conflicts of class, race, and power in the South African region. It can be paired with Burton&rsquo;s discussions of the fraught alliances between Indian and African workers in the early twentieth century or any of the lesson plans or research assignments.</p>
+							</dd>
+						</dl>
+					</section>
+
+					<section aria-labelledby="framework-4">
+						<h4 id="framework-4">Intimacy, indentureship, and histories of contact across the global south:</h4>
+						<dl>
+							<dt id="burton">Burton, Antoinette. <em>Africa in the Indian Imagination</em>. Duke University Press, 2016.</dt>
+	
+							<dd aria-describedby="burton">
+								<p>Despite tentatively framing the uplifting vision of a past where Indians and Africans &ldquo;undoubtedly worked and played together&hellip;fought with and against each other&rdquo; in a variety of transnational exchanges, Burton&rsquo;s book focuses primarily on the many dissonances that hinder the formation of a resilient anticolonial bond&mdash;critical among them being &ldquo;colonial-era racial hierarchies.&rdquo; This text would work as essential background/secondary reading for the sources in 2b.</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="hofmeyr">Hofmeyr, Isabel. <em>Gandhi&rsquo;s Printing Press: Experiments in Slow Reading</em>. Harvard University Press, 2013.</dt>
+	
+							<dd aria-describedby="hofmeyr">
+								<p>Hoftmeyr&rsquo;s chapter on the print cultures of the Indian Ocean world (ch. 1) do the valuable work of swiftly sketching an intercontinental architecture of print networks for students. The chapter fleshes out the relationship between print media and space through concepts like &ldquo;diasporic printing&rdquo; and &ldquo;print frontiers&rdquo;&mdash;thus offering a paradigm to question the widespread distribution and circulation of a mythicized African continent.</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="carter">Carter, Marina and Khal Torabully. <em>Coolitude: An Anthology of Indian Labor Diaspora.</em> Anthem Press, 2002.</dt>
+	
+							<dd aria-describedby="carter">
+								<p>Framing the identity of the &ldquo;coolie&rdquo; in a genealogy of terms including n&eacute;gritude and cr&eacute;olit&eacute;, the&nbsp;<em>Coolitude&nbsp;</em>anthology focuses on coolie&rsquo;s cultural production, a genre that could presumably include Shankar&rsquo;s travelogue, and would bear a deeply contentious relation to Ghanada&rsquo;s stories. Some of the stories of misled migrants in the early pages of the anthology echoes the bright hopes that Shankar&rsquo;s uncle told him during recruitment, although the position clearly did not fit Shankar&rsquo;s interests. The text also places migration into South Africa within a larger panorama of South Asian indentured migration to British colonies worldwide.</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="lowe">Lowe, Lisa. <em>The Intimacies of Four Continents</em>. Duke University Press, 2016.</dt>
+	
+							<dd aria-describedby="lowe">
+								<p>A byword for influential and deeply careful global study, Lisa Lowe&rsquo;s <em>The Intimacies</em> could be meaningfully placed in any part of this module but especially paired with texts in 2c. In conversation with Burton (2016) for example, her idea of intercontinental alliances and relations between people of color can offer a critical counterpoint to the fraught relations between immigrant South Asian and Indigenous African people in the Bengali narratives included here.</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="mowtushi">Mowtushi, Mahruba T. <em>Africa in the Bengali Imagination:&nbsp;From Calcutta to Kampala, 1928-1973</em>. Taylor &amp; Francis, 2022.</dt>
+	
+							<dd aria-describedby="mowtushi">
+								<p>This monograph is a valuable resource for contextualizing the Bengali language primary texts and their unfolding against the background of transnational connections between Africa and India. Most importantly, they would ground students in the role of these texts in a Bengali literary/cultural milieu, emphasizing their participation in regional and transimperial literary traditions.</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="islam">Islam, Najnin. &ldquo;Life Unadministered: Colonial Care and the Indian Care&rdquo; <em>Small Axe</em>, vol. 27 no. 1, March 2023, pp. 1&ndash;18.</dt>
+	
+							<dd aria-describedby="islam">
+								<p>This recent article employs the concept of &ldquo;care&rdquo; to demonstrate the ways in which racialized labor was subjected to soft forms of management and control. Since it focuses on a historical voyage from Calcutta to the Caribbean, it can both make students aware of the historical contexts of the actual journey across the Indian Ocean faced by indentured laborers, and the close connection between the Caribbean and Africa in practices of indentureship and its maintenance.</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="banerjee-3">Banerjee, S. and Basu, S. &ldquo;Mountain of the Moon: Africa and the Gendered Imagining of Modern India.&rdquo;<em> Gender &amp; History</em>, vol. 27, 2023, pp. 171-189.</dt>
+	
+							<dd aria-describedby="banerjee-3">
+								<p>This important article highlights the aspect of imperial masculinity that is a critical framework to understand the affective construction of Africa in imperial texts. It is a perfect complement to the lesson plans in Section 2, since it will allow students to identify the Bengali imperialist figures within existing logics of &ldquo;proper manhood&rdquo; among colonial subjects as a response to accepted forms of English manliness.</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="sengupta">Sengupta, Oishani. &ldquo;The Brown Adventure Romance: <em>Chander Pahar</em> and the Management of Racial Capital.&rdquo; <em>Verge: Studies in Global Asias</em>, 2024. (Forthcoming)</dt>
+	
+							<dd aria-describedby="sengupta">
+								<p>This article was written in conjunction with the research done to produce this lesson module and can form a natural pairing when read alongside it. In particular, it can be read with Section 2.1 (lesson plan) since it explores many of the questions related to Shankar&rsquo;s remaking as an imperialist adventurer who is, paradoxically, racialized as <em>brown</em>.</p>
+							</dd>
+						</dl>
+
+						<dl>
+							<dt id="lewis">Lewis, Su Lin and Carolien Stolte. "Other Bandungs: Afro-Asian Internationalisms in the Early Cold War." <em>Journal of World History</em>, vol. 30 no. 1, p. 1-19, 2019.</dt>
+	
+							<dd aria-describedby="lewis">
+								<p>The purpose of this article is to give students a wider view of Afro-Asian contact beyond the dominant narrative of the Bandung Conference. While the article&rsquo;s focus on &ldquo;disrupt[ing] hard divisions between state and non-state and warring Cold War blocs&rdquo; might seem a little distant from the concerns of its volume, it can affirm to students that grand narratives of intercontinental alliance are rife with slippage and untold histories.</p>
+							</dd>
+						</dl>
+					</section>
 				</section>
 
 				<section aria-labelledby="assignments">
