--- a/html/lesson_plans/contemporary_undisciplining_dracula.html
+++ b/html/lesson_plans/contemporary_undisciplining_dracula.html
@@ -49,7 +49,7 @@
 					<div class="specs-container">
 						<p><strong>Developer:</strong> Renée Fox <a class="mail" href="mailto:rafox@ucsc.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
-						<p><strong>Peer Reviewer:</strong> Barbara Barrow, Renee Fox, Cherrie Kwok, Jessie Reeder, Oishani Sengupta, Emma Soberano</p>
+						<p><strong>Peer Reviewers:</strong> Barbara Barrow, Renee Fox, Cherrie Kwok, Jessie Reeder, Oishani Sengupta, Emma Soberano</p>
 						
 						<p><strong>Lesson Plan Cluster Developer/Copyeditor:</strong> Ryan D. Fong <a class="mail" href="mailto:Ryan.Fong@kzoo.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 						
