--- a/html/lesson_plans/contemporary_undisciplining_dracula.html
+++ b/html/lesson_plans/contemporary_undisciplining_dracula.html
@@ -463,7 +463,7 @@
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 
-					<p>Renée Fox , dev. “Undisciplining Dracula: Fledgling and Afrofuturism.” Barbara Barrow, Renee Fox, Cherrie Kwok, Jessie Reeder, Oishani Sengupta, Emma Soberano, collab peer revs.; Ryan D. Fong, les. plan clust. dev./copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/contemporary_undisciplining_dracula.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary_undisciplining_dracula.html</a>.</p><!-- Change -->
+					<p>Renée Fox , dev. “Undisciplining Dracula: Fledgling and Afrofuturism.” Barbara Barrow, Renee Fox, Cherrie Kwok, Jessie Reeder, Oishani Sengupta, Emma Soberano, collab. peer revs.; Ryan D. Fong, les. plan clust. dev./copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/contemporary_undisciplining_dracula.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary_undisciplining_dracula.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
