--- a/html/lesson_plans/contemporary_postcolonial_texts.html
+++ b/html/lesson_plans/contemporary_postcolonial_texts.html
@@ -472,7 +472,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Oishani Sengupta, dev. “Colonial/Postcolonial Texts of the “Dark Continent”.” Barbara Barrow, Renée Fox, Cherrie Kwok, Diana Rose Newby, Matthew Poland, Jessie Reeder, and Emma Soberano, collab peer revs.; Ryan D. Fong, les. plan clust. dev.; Ryan D. Fond, copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/contemporary_postcolonial_texts.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary_postcolonial_texts.html</a>.</p>
+					<p>Oishani Sengupta, dev. “Colonial/Postcolonial Texts of the “Dark Continent”.” Barbara Barrow, Renée Fox, Cherrie Kwok, Diana Rose Newby, Matthew Poland, Jessie Reeder, and Emma Soberano, collab. peer revs.; Ryan D. Fong, les. plan clust. dev.; Ryan D. Fond, copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/contemporary_postcolonial_texts.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary_postcolonial_texts.html</a>.</p>
 				</section>
 			</main>
 			
