--- a/html/lesson_plans/contemporary_africanfuturism.html
+++ b/html/lesson_plans/contemporary_africanfuturism.html
@@ -153,7 +153,7 @@
 				<section aria-labelledby="who-fears-death">
 					<h3 id="who-fears-death"><em>Who Fears Death</em></h3>
 					
-					<p>Nnedi Okorafor is a Hugo, Nebula, and Eisner (among others) award-winning author belonging to the Nigerian Third Generation. She is the author of over two dozen texts of science fiction and fantasy, including children’s, YA, and adult fiction, and comics. She is a self-described producer of “Africanfuturism” (more on this in the next section).</p>
+					<p>Nnedi Okorafor is a Hugo, Nebula, and Eisner (among others) award-winning author belonging to the Nigerian Third Generation. She is the author of over two dozen texts of science fiction and fantasy, including children’s, young adult, and adult fiction, and comics. She is a self-described producer of “Africanfuturism” (more on this in the next section).</p>
 
 					<p>Her 2010 novel <em>Who Fears Death</em> is difficult to categorize generically. It follows the story of Onyesonwu, a young woman who discovers that she has powers of shapeshifting and sorcery. While processing this new reality, she is also navigating her origin as a child of rape, her present in a post-apocalyptic Africa beset by tribal violence and misogyny, and the threats to her future posed by her powerful biological father.</p>
 
