--- a/html/lesson_plans/contemporary_undisciplining_introduction.html
+++ b/html/lesson_plans/contemporary_undisciplining_introduction.html
@@ -54,10 +54,12 @@
 						<div>
 							<strong>Lesson Plan Pages:</strong> 
 							<ol>
-								<li><a href="/html/lesson_plans/seacole_decentering_britishness.html">Decentering Britishness</a></li>
-								<li><a href="/html/lesson_plans/seacole_undisciplining_autobiography.html">Undisciplining Victorian Autobiography</a></li>
-								<li><a href="/html/lesson_plans/seacole_recentering_nursing.html">Recentering Nursing in Wartime</a></li>
-								<li><a href="/html/lesson_plans/seacole_decolonizing_heathcare.html">Decolonizing Health(care)</a></li>
+								<li><a href="html/lesson_plans/contemporary_bronte_phillips.html">Emily Brontë’s <em>Wuthering Heights</em> and Caryl Phillips’s <em>The Lost Child</em></a></li>
+								<li><a href="html/lesson_plans/contemporary_africanfuturism.html">Africanfuturism and British Catastrophe Literature</a></li>
+								<li><a href="html/lesson_plans/contemporary_postcolonial_texts.html">Colonial/Postcolonial Texts of the “Dark Continent”</a></li>
+								<li><a href="html/lesson_plans/contemporary_re-reading_archives.html">Re-Reading Nineteenth-Century Archives</a></li>
+								<li><a href="html/lesson_plans/contemporary_undisciplining_dracula.html">Undisciplining <em>Dracula</em>: <em>Fledgling</em> and Afrofuturism</a></li>
+								<li><a href="html/lesson_plans/contemporary_undisciplining_ecocolonialism.html">Undisciplining Ecocolonialism with Leslie Marmon Silko</a></li>
 							</ol>
 						</div>
 
