poco t pass to toc

--- a/html/lesson_plans/contemporary_postcolonial_texts.html
+++ b/html/lesson_plans/contemporary_postcolonial_texts.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
     <title>Colonial/Postcolonial Texts of the “Dark Continent” | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Lesson plan exploring a genealogy of British and Bengali texts that perpetuate the impression of a racially stereotyped Africa in the nineteenth and twentieth centuries."/>
+		<meta name="description" content="Lesson plan exploring a genealogy of British and Bengali texts that support the idea of a racially stereotyped Africa in the nineteenth and twentieth centuries."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#143D5D"/>
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 				<h2 id="lesson-plan">Colonial/Postcolonial Texts of the “Dark Continent”</h2>
 					<div class="aspect-ratio-box">
-          	<img src="/img/lesson_plans/uvc_0083-1800px.jpg" srcset="/img/lesson_plans/uvc_0083-1800px.jpg 1800w, /img/lesson_plans/uvc_0083-1650px.jpg 1650w, /img/lesson_plans/uvc_0083-1500px.jpg 1500w, /img/lesson_plans/uvc_0083-1350px.jpg 1350w, /img/lesson_plans/uvc_0083-1200px.jpg 1200w, /img/lesson_plans/uvc_0083-1050px.jpg 1050w, /img/lesson_plans/uvc_0083-900px.jpg 900w, /img/lesson_plans/uvc_0083-750px.jpg 750w, /img/lesson_plans/uvc_0083-600px.jpg 600w, /img/lesson_plans/uvc_0083-450px.jpg 450w, /img/lesson_plans/uvc_0083-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A map of the African continent denoting large areas as unknown areas but depicting notable detail in the known regions."
+          	<img src="/img/lesson_plans/uvc_0083-1800px.jpg" srcset="/img/lesson_plans/uvc_0083-1800px.jpg 1800w, /img/lesson_plans/uvc_0083-1650px.jpg 1650w, /img/lesson_plans/uvc_0083-1500px.jpg 1500w, /img/lesson_plans/uvc_0083-1350px.jpg 1350w, /img/lesson_plans/uvc_0083-1200px.jpg 1200w, /img/lesson_plans/uvc_0083-1050px.jpg 1050w, /img/lesson_plans/uvc_0083-900px.jpg 900w, /img/lesson_plans/uvc_0083-750px.jpg 750w, /img/lesson_plans/uvc_0083-600px.jpg 600w, /img/lesson_plans/uvc_0083-450px.jpg 450w, /img/lesson_plans/uvc_0083-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A map of Africa denoting large portions as unknown but depicting notable detail in the known areas.">
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
@@ -49,11 +49,9 @@
 					<div class="specs-container">
 						<p><strong>Developer:</strong> Oishani Sengupta <a class="mail" href="mailto:oishanisengupta@utep.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
-						<p><strong>Peer Reviewer:</strong> Barbara Barrow, Renée Fox, Cherrie Kwok, Diana Rose Newby, Matthew Poland, Jessie Reeder, and Emma Soberano</p>
+						<p><strong>Peer Reviewers:</strong> Barbara Barrow, Renée Fox, Cherrie Kwok, Diana Rose Newby, Matthew Poland, Jessie Reeder, and Emma Soberano</p>
 						
-						<p><strong>Lesson Plan Cluster Developer:</strong> Ryan D. Fong <a class="mail" href="mailto:Ryan.Fong@kzoo.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
-
-						<p><strong>Copyeditor:</strong> Ryan D. Fong</p>
+						<p><strong>Lesson Plan Cluster Developer/Copyeditor:</strong> Ryan D. Fong <a class="mail" href="mailto:Ryan.Fong@kzoo.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 						
 						<p><strong>Webpage Developer:</strong> Ava K. Bindas</p>
 
@@ -75,23 +73,23 @@
 						</li>
 						<li><a href="#primary-sources">Suggested Primary Sources</a>
 							<ol>
-								<li><a href="#sources-1">British colonial texts written about Africa (c19)</a></li>
-								<li><a href="#sources-2">Retellings of colonial genres from Africa (c19 and c20)</a></li>
-								<li><a href="#sources-3">Bengali impressions of the “dark continent” (c20)</a></li>
+								<li><a href="#sources-1">British Colonial Texts Written about Africa (nineteenth century)</a></li>
+								<li><a href="#sources-2">Retellings of Colonial Genres from Africa (nineteenth and twentieth century)</a></li>
+								<li><a href="#sources-3">Bengali Impressions of the “Dark Continent” (twentieth century)</a></li>
 							</ol>
 						</li>
 						<li><a href="#frameworks">Critical Frameworks</a>
 							<ol>
-								<li><a href="#framework-1">Framing conversations</a></li>
-								<li><a href="#framework-2">Theories of imperial travel</a></li>
-								<li><a href="#framework-3">Indigenous African critiques of colonialism</a></li>
-								<li><a href="#framework-4">Intimacy, indentureship, and histories of contact across the Global South</a></li>
+								<li><a href="#framework-1">Framing Conversations</a></li>
+								<li><a href="#framework-2">Theories of Imperial Travel</a></li>
+								<li><a href="#framework-3">Indigenous African Critiques of Colonialism</a></li>
+								<li><a href="#framework-4">Intimacy, Indentureship, and Histories of Contact Across the Global South</a></li>
 							</ol>
 						</li>
 						<li><a href="#assignments">Multimodal Assignments</a>
 							<ol>
-								<li><a href="#assignment-1">Mapping assignment</a></li>
-								<li><a href="#assignment-2">Archival assignment</a></li>
+								<li><a href="#assignment-1">Mapping Assignment</a></li>
+								<li><a href="#assignment-2">Archival Assignment</a></li>
 							</ol>
 						</li>
 					</ol>
